# ftv

./: CMakeLists.txt  README.md
includes/crypto/: checksum.hpp  decrypt.hpp  encrypt.hpp  encrypted_data.hpp  evp_cipher_raii.hpp  secure_key.hpp  serialize.hpp
includes/file/: file.hpp
includes/video/: av_codec_ctx.hpp  av_format_ctx.hpp  av_frame.hpp  av_packet.hpp  media.hpp  metadata.hpp  pixel.hpp  position.hpp  resolution.hpp  video.hpp  video_error.hpp  video_io.hpp
includes/video/ffmpeg/: av_codec_ctx.hpp  av_format_ctx.hpp  av_frame.hpp  av_packet.hpp  video.hpp
includes/video/opencv/: video.hpp  video_io.hpp
includes/youtube/: client.hpp
src/: CMakeLists.txt  main.cpp
src/crypto/: checksum.cpp  decrypt.cpp  encrypt.cpp  encrypt.hpp  encrypted_data.cpp  evp_cipher_raii.cpp  secure_key.cpp  serialize.cpp
src/file/: file.cpp
src/video/: av_codec_ctx.cpp  av_format_ctx.cpp  av_frame.cpp  av_packet.cpp  metadata.cpp  pixel.cpp  video.cpp
src/video/ffmpeg/: av_codec_ctx.cpp  av_format_ctx.cpp  av_frame.cpp  av_packet.cpp  video.cpp
src/video/opencv/: video.cpp
test/: test.avi  test2.txt  text.txt  text_decrypted  text_encrypted
